# ups-monitor

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
scripts/: check_ups.sh  install_remote.sh
tests/: test_logger.py  test_parser.py  test_poller.py
ups_monitor/: __init__.py  daemon.py  logger.py  main.py  models.py  parser.py  poller.py  ui.py
